reactivate this branch
* adds script block commands arguments